--- a/javascript/LearningJavaScript/04.index.html
+++ b/javascript/LearningJavaScript/04.index.html
@@ -9,8 +9,23 @@
     </head>
     <body>
         <h1>레드향</h1>
-        <p>껍질에 붉은 빛이 돌아 레드향이라 불린다</p>
+        <p>껍질에 붉은 빛이 돌아 <span class="accent">레드향</span>이라 불린다</p>
         <p>레드향은 한라봉과 규을 교배한 것으로...</p>
-        <p>비타민 C와 비타민 P가 풍부해...</p>
+        <p class="italic">비타민 C와 비타민 P가 풍부해...</p>
+        <a href="./index.html">main</a>
+
+
+        <h2>상품구성</h2>
+        <table>
+            <caption>선물용과 가정용품 상품 구성</caption>
+            <thead>
+                <th>
+                    <td>용도</td>
+                    <td>중량</td>
+                    <td>개수</td>
+                    <td>가격</td>
+                </th>
+            </thead>
+        </table>
     </body>
 </html>
